--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: rgba(0, 0, 0, 0.15);
+    background-color: rgba(0, 0, 0, 0.30);
     display: flex;
     align-items: center;
     height: 70px;
@@ -8,29 +8,19 @@
     top: 0;
     width: 100%;
 }
-
 .navbarLinks {
     display: flex;
-    /*place them from the right*/
     margin-left: auto;
     padding-left: 40px;
     padding-right: 40px;
-
     justify-content: space-around;
     list-style: none;
 }
-
-.sections {
-    text-align: center;
-    position: center;
-}
-
 .navbarLinks a {
     font-weight: 325;
     font-family: var(--font-mono);
     color: var(--secondary-color);
 }
-
 @media screen and (min-width: 701px) {
     .navbarLinks a {
         font-size: var(--small-font-size);
@@ -38,7 +28,6 @@
         margin-right: 20px;
     }
 }
-
 @media screen and (max-width: 700px) {
     .navbarLinks a {
         font-size: var(--small-responsive-font-size);
@@ -46,10 +35,16 @@
         margin-right: 2vw;
     }
 }
-
 .navbar img {
     margin-left: 40px;
 }
+
+
+.sections {
+    text-align: center;
+    position: center;
+}
+
 
 .subtitle {
     font-family: var(--font-titles);
@@ -57,29 +52,25 @@
     font-weight: 400;
     color: var(--accent-color);
 }
-
 .text {
     font-family: var(--font-mono);
-    font-size: 1.5vw;
+    font-size: 1.6vw;
     font-weight: 350;
     color: var(--secondary-color);
 }
-
 .aboutText {
     line-height: 1.65;
     margin-top: 50px;
     margin-left: 20%;
     margin-right: 20%;
 }
-
 .about {
     margin-top: 200px;
+    margin-bottom: 100px;
 }
-
 .home {
     padding-top: 200px;
 }
-
 .mainTitle {
     font-family: var(--font-titles);
     font-size: 8vw;
@@ -87,7 +78,6 @@
     line-height: 1.05;
     color: var(--accent-color);
 }
-
 .mainSubTitle {
     margin-top: 10px;
     font-family: var(--font-mono);
@@ -96,6 +86,109 @@
     color: var(--secondary-color);
 }
 
+
 .projects {
     margin-top: 200px;
+    margin-bottom: 100px;
+}
+.individualProject{
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s ease-in-out;
+    margin: 20px 30vw 20px;
+    border-radius: 20px;
+}
+.individualProject:hover{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.mainProjectData{
+    display: flex;
+    align-items: center;
+}
+.auxProjectData{
+    text-align: left;
+    padding: 0.25vw 2vw 1vw;
+}
+.projectList{
+    margin-top: 50px;
+}
+.projectImg{
+    margin: 1vw 2vw 1vw 1vw;
+}
+.projectMainData {
+    text-align: left;
+    margin-top: 0.25vw;
+    margin-bottom: 1vw;
+    margin-right: 2vw;
+}
+.projectAuxData{
+}
+
+
+.contact{
+    margin-top: 200px;
+    margin-bottom: 100px;
+}
+.contactButton1{
+    width: 30vw;
+    height: 3vw;
+    font-family: var(--font-mono);
+    font-size: 1.5vw;
+    font-weight: 350;
+    color: var(--secondary-color);
+    background-color: rgba(0, 0, 0, 0.20);
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    transition: background-color 0.3s ease-in-out;
+}
+.contactButton1:hover{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.contactButton2{
+    width: 30vw;
+    height: 3vw;
+    font-family: var(--font-mono);
+    font-size: 1.5vw;
+    font-weight: 350;
+    color: var(--secondary-color);
+    background-color: rgba(128, 128, 128, 0.50);
+    border-radius: 20px;
+    border: none;
+    outline: none;
+}
+.contactData{
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+.contactData input{
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.20);
+    border-radius: 15px;
+    width: 23vw;
+    height: 2vw;
+    border: none;
+    outline: none;
+    font-family: var(--font-mono);
+    font-size: 1.5vw;
+    font-weight: 350;
+    color: var(--secondary-color);
+}
+.contactData input::placeholder{
+    color: black;
+}
+.contactData textarea
+{
+    margin-top: 5px;
+    background-color: rgba(0, 0, 0, 0.20);
+    width: 63vw;
+    height: 30vw;
+    font-family: var(--font-mono);
+    font-size: 1.5vw;
+    font-weight: 350;
+    color: var(--secondary-color);
+    border-radius: 10px;
+    padding-left: 1vw;
+}
+.contactData textarea::placeholder{
+    color: black;
 }
