Get request enable

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,10 +35,10 @@ body {
 }
 
 body {
-  -webkit-user-select: none; /* Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
-  user-select: none; /* Standard */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   background-image: url("../public/background2.png");
   background-size: 101%;
   background-position: top center;
