--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -11,8 +11,7 @@
 .navbarLinks {
     display: flex;
     margin-left: auto;
-    padding-left: 40px;
-    padding-right: 40px;
+    
     justify-content: space-around;
     list-style: none;
 }
@@ -21,59 +20,52 @@
     font-family: var(--font-mono);
     color: var(--secondary-color);
 }
-@media screen and (min-width: 701px) {
-    .navbarLinks a {
-        font-size: var(--small-font-size);
-        margin-left: 20px;
-        margin-right: 20px;
-    }
+
+.navbarLinks {
+    padding-left: var(--40px-responsive);
+    padding-right: var(--40px-responsive);
 }
-@media screen and (max-width: 700px) {
-    .navbarLinks a {
-        font-size: var(--small-responsive-font-size);
-        margin-left: 2vw;
-        margin-right: 2vw;
-    }
-}
-.navbar img {
-    margin-left: 40px;
+.navbarLinks a {
+    font-size: min(3.25vw, 20px);
+    margin-left: var(--20px-responsive);
+    margin-right: var(--20px-responsive);
 }
 
+.navbar img {
+    margin-left: var(--40px-responsive);
+}
 
 .sections {
     text-align: center;
-    position: center;
 }
-
 
 .subtitle {
     font-family: var(--font-titles);
-    font-size: 2.6vw;
+    font-size: var(--subtitle-font-size);
     font-weight: 400;
     color: var(--accent-color);
 }
+
 .text {
     font-family: var(--font-mono);
-    font-size: 1.6vw;
+    font-size: var(--small-font-size);
     font-weight: 350;
     color: var(--secondary-color);
 }
+
 .aboutText {
     line-height: 1.65;
-    margin-top: 50px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-top: 5vw;
+    margin-left: 15%;
+    margin-right: 15%;
 }
-.about {
-    margin-top: 200px;
-    margin-bottom: 100px;
-}
+
 .home {
-    padding-top: 200px;
+    padding-top: 20vw;
 }
 .mainTitle {
     font-family: var(--font-titles);
-    font-size: 8vw;
+    font-size: min(12vw, 140px);
     font-weight: 400;
     line-height: 1.05;
     color: var(--accent-color);
@@ -81,39 +73,46 @@
 .mainSubTitle {
     margin-top: 10px;
     font-family: var(--font-mono);
-    font-size: 2.5vw;
+    font-size: min(4vw, 40px);
     font-weight: 350;
     color: var(--secondary-color);
 }
 
-
-.projects {
-    margin-top: 200px;
-    margin-bottom: 100px;
+.sectionTitle {
+    margin-top: 8vw;
+    padding-top: 8vw;
+    margin-bottom: 8vw;
 }
+
 .individualProject{
     background-color: rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s ease-in-out;
     margin: 20px 30vw 20px;
     border-radius: 20px;
 }
+
 .individualProject:hover{
     background-color: rgba(0, 0, 0, 0.5);
 }
+
 .mainProjectData{
     display: flex;
     align-items: center;
 }
+
 .auxProjectData{
     text-align: left;
     padding: 0.25vw 2vw 1vw;
 }
+
 .projectList{
     margin-top: 50px;
 }
+
 .projectImg{
     margin: 1vw 2vw 1vw 1vw;
 }
+
 .projectMainData {
     text-align: left;
     margin-top: 0.25vw;
@@ -123,75 +122,79 @@
 .projectAuxData{
 }
 
-
-.contact{
-    margin-top: 200px;
-    margin-bottom: 100px;
-}
 .contactButton1{
-    width: 30vw;
-    height: 3vw;
+    width: 35vw;
+    height: min(6.5vw, 45px);
     font-family: var(--font-mono);
-    font-size: 1.5vw;
+    font-size: var(--small-font-size);
     font-weight: 350;
-    color: var(--secondary-color);
-    background-color: rgba(0, 0, 0, 0.20);
-    border-radius: 20px;
+    color: var(--accent-color);
+    border-radius: 15px;
     border: none;
     outline: none;
+    background-color: rgba(0, 0, 0, 0.20);
     transition: background-color 0.3s ease-in-out;
 }
 .contactButton1:hover{
     background-color: rgba(0, 0, 0, 0.5);
 }
 .contactButton2{
-    width: 30vw;
-    height: 3vw;
+    width: 35vw;
+    height: min(6.5vw, 45px);
     font-family: var(--font-mono);
-    font-size: 1.5vw;
+    font-size: var(--small-font-size);
     font-weight: 350;
-    color: var(--secondary-color);
-    background-color: rgba(128, 128, 128, 0.50);
-    border-radius: 20px;
+    color: var(--accent-color);
+    background-color: rgba(100, 100, 100, 0.50);
+    border-radius: 15px;
     border: none;
     outline: none;
 }
-.contactData{
-    margin-top: 50px;
-    margin-bottom: 20px;
+.contactData {
+    margin-top: 5vw;
+    margin-bottom: 2vw;
+}
+.contactData p {
+    line-height: 1.65;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 .contactData input{
-    text-align: center;
+    text-align: left;
+    padding-left: 2vw;
     background-color: rgba(0, 0, 0, 0.20);
     border-radius: 15px;
-    width: 23vw;
-    height: 2vw;
+    width: min(40vw, 425px);
+    height: min(4.75vw, 35px);
     border: none;
     outline: none;
     font-family: var(--font-mono);
-    font-size: 1.5vw;
+    font-size: var(--small-font-size);
     font-weight: 350;
+    color: var(--accent-color);
+}
+
+.contactData input::placeholder{
     color: var(--secondary-color);
 }
-.contactData input::placeholder{
-    color: black;
+.contactData textarea::placeholder{
+    color: var(--secondary-color);
 }
 .contactData textarea
 {
-    margin-top: 5px;
+    margin-top: 2vw;
     background-color: rgba(0, 0, 0, 0.20);
-    width: 63vw;
-    height: 30vw;
+    width: 80%;
+    height: 400px;
     font-family: var(--font-mono);
-    font-size: 1.5vw;
+    font-size: var(--small-font-size);
     font-weight: 350;
-    color: var(--secondary-color);
     border-radius: 10px;
-    padding-left: 1vw;
+    padding: 1.6vw;
+    margin-left: 10%;
+    margin-right: 10%;
 }
-.contactData textarea::placeholder{
-    color: black;
-}
+
 .stack{
     display: flex;
     align-items: center;
