--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -246,6 +246,7 @@
     height: 400px;
     font-family: var(--font-mono);
     font-size: var(--small-font-size);
+    color: var(--accent-color);
     font-weight: 350;
     border-radius: 10px;
     padding: 1.6vw;
